# Audio2Face-3D-SDK

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
bridge/: CMakeLists.txt
bridge/cmake/: FindA2X_SDK.cmake
bridge/include/: a2f_bridge.h
bridge/src/: a2f_bridge.cpp
